--- a/src/index.css
+++ b/src/index.css
@@ -100,6 +100,10 @@ a{
   overflow: hidden;
 }
 
+.notesScreen .notes_card.view{
+  height: 100%;
+}
+
 .notesScreen .bottom_buttons_container{
   display: flex;
   align-items: center;
@@ -131,7 +135,6 @@ a{
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 90vh;
   width: 100vw;
 }
 
